FIx scrollbars

--- a/src/app/components/catalog/navigation/index.scss
+++ b/src/app/components/catalog/navigation/index.scss
@@ -3,11 +3,9 @@
     max-width: 180px;
     height: 100%;
     margin-right: $card-spacer-y;
-    background: rgba($light, 1);
+    background: rgba(#222222, 1);
 
     .scroll-container {
-        max-height: 435px;
-        overflow: scroll;
         padding: 5px;
     }
 
