--- a/src/app/components/catalog/offergrid/index.scss
+++ b/src/app/components/catalog/offergrid/index.scss
@@ -1,6 +1,6 @@
 .nitro-catalog-offer-grid-component {
     position: relative;
-    background: rgba($light, 1);
+    background: rgba(#222222, 1);
     height: 100%;
     width: 100%;
     padding: $card-spacer-x $card-spacer-x;
@@ -12,7 +12,6 @@
         justify-content: space-between;
         align-content: flex-start;
         width: 100%;
-        height: 165px;
         overflow: scroll;
 
         .item-detail {
@@ -24,7 +23,7 @@
             width: calc(1 / 6 * 100% - (1 - 1 / 6) * 5px);
             height: 50px;
             box-sizing: border-box;
-            background: $destiny;
+            background: #131313;
             background-repeat: no-repeat;
             background-origin: content-box;
             border-radius: 3px;
