--- a/src/app/shared/components/furnituregrid/index.scss
+++ b/src/app/shared/components/furnituregrid/index.scss
@@ -1,6 +1,6 @@
 .grid-container {
     position: relative;
-    background: rgba($light, 1);
+    background: rgba(#222222, 1);
     height: auto;
     width: 100%;
     padding: 10px;
@@ -12,7 +12,6 @@
         justify-content: space-between;
         align-content: flex-start;
         width: 100%;
-        height: 225px;
         margin-top: -5px;
         overflow: hidden;
 
@@ -22,7 +21,7 @@
             height: 70px;
             padding: 3px;
             margin: 5px 5px 0 0;
-            background: $destiny;
+            background: #131313;
             border-radius: 3px;
             border: 2px solid transparent;
             overflow: hidden;
